--- a/bower.json
+++ b/bower.json
@@ -1,15 +1,21 @@
 {
   "name": "bootstrap-slider",
-  "main": ["bootstrap-slider.js", "slider.css"],
+  "main": [
+    "bootstrap-slider.js",
+    "slider.css"
+  ],
   "version": "2.0.0",
-  "homepage": "https://github.com/pammacdotnet/bootstrap-slider",
+  "homepage": "https://github.com/cbetancourt/bootstrap-slider",
   "authors": [
-    "pammacdotnet"
+    "pammacdotnet",
+    "cbetancourt"
   ],
   "description": "Eyecon Slider for Bootstrap",
   "keywords": [
     "slider",
-    "bootstrap"
+    "bootstrap",
+    "amd",
+    "globals"
   ],
   "license": "Apache",
   "ignore": [
@@ -18,5 +24,13 @@
     "bower_components",
     "test",
     "tests"
+  ],
+  "dependencies": {
+    "requirejs": "^2.1.22",
+    "jquery": "^2.2.0"
+  },
+  "moduleType": [
+    "amd",
+    "globals"
   ]
 }
