--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "bootstrap-slider",
+  "name": "bootstrap-slider-amd",
   "main": [
     "bootstrap-slider.js",
     "slider.css"
   ],
-  "version": "2.0.0",
-  "homepage": "https://github.com/cbetancourt/bootstrap-slider",
+  "version": "2.1.0",
+  "homepage": "https://github.com/cbetancourt/bootstrap-slider-amd",
   "authors": [
     "pammacdotnet",
     "cbetancourt"
