--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,13 @@
         "bootstrap-slider.js",
         "slider.css"
     ],
-    "version": "2.1.1",
+    "version": "2.1.2",
     "homepage": "https://github.com/cbetancourt/bootstrap-slider-amd",
     "authors": [
         "pammacdotnet",
         "cbetancourt"
     ],
-    "description": "Eyecon Slider for Bootstrap",
+    "description": "A Bootstrap Slider component that supports AMD and browser globals.",
     "keywords": [
         "slider",
         "bootstrap",
@@ -26,8 +26,7 @@
         "tests"
     ],
     "dependencies": {
-        "requirejs": "^2.1.22",
-        "jquery": "^2.2.0"
+        "jquery": "^1.12.0"
     },
     "moduleType": [
         "amd",
