--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "bootstrap-slider",
-    "version": "2.1.1",
+    "version": "2.1.2",
     "description": "A Bootstrap Slider component that supports AMD and browser globals.",
     "main": "bootstrap-slider.js",
     "directories": {
@@ -25,8 +25,10 @@
         "url": "https://github.com/cbetancourt/bootstrap-slider-amd/issues"
     },
     "homepage": "https://github.com/cbetancourt/bootstrap-slider-amd#readme",
-    "dependencies": {
+    "dependencies": {},
+    "devDependencies": {
         "clean-css": "^3.4.9",
+        "requirejs": "^2.1.22",
         "uglify-js": "^2.6.1"
     }
 }
