--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "bootstrap-slider-amd",
-	"version": "2.1.6",
+	"version": "2.2.0",
 	"description": "A Bootstrap Slider component that supports AMD and browser globals.",
 	"main": "bootstrap-slider.js",
 	"directories": {
@@ -25,10 +25,12 @@
 		"url": "https://github.com/cbetancourt/bootstrap-slider-amd/issues"
 	},
 	"homepage": "https://github.com/cbetancourt/bootstrap-slider-amd#readme",
-	"dependencies": {},
+	"dependencies": {
+		"jquery": "^1.12.0"
+	},
 	"devDependencies": {
-		"clean-css": "3.4.9",
-		"requirejs": "2.1.22",
-		"uglify-js": "2.6.1"
+		"clean-css": "3.4.21",
+		"requirejs": "2.3.2",
+		"uglify-js": "2.7.5"
 	}
 }
